# 2core

./: .gitignore  CLAUDE.md  README.md  gleam.toml  manifest.toml  temp.ir
.github/workflows/: test.yml
docs/: phase-3-benchmark.md  phase-4-benchmark.md  phase-5-surface.md
scripts/: gen-conformance-svg.sh
smoke/: Cargo.toml  README.md  bench.sh  run.sh
smoke/src/: lib.rs
specs/: 00-high-level.md  future-work-memory-optimizer.md  state.md
specs/phase-1/: 00-overview.md  01-interface-freeze.md  02-ir-textual-form.md  03-core-erlang-backend.md  04-build-beam-driver.md  05-wasm-decoder.md  06-rt-num-numerics.md  07-conformance-harness.md  08-emit-core.md  09-runtime-defaults.md  10-wasm-validate-and-lower.md  11-ir-lower-linker-cli.md  ir-grammar.md
specs/phase-2/: 00-overview.md  01-interface-freeze.md  02-ir-textual-form.md  03-rt-state-lifecycle.md  04-rt-mem.md  05-rt-table.md  06-rt-num-floats.md  07-decode.md  08-validate.md  09-lower.md  10-emit-core.md  11-capstone.md  ir2-grammar-delta.md
specs/phase-3/: 00-overview.md  01-interface-freeze.md  02-effect-analysis.md  03-ir-opt-baseline.md  04-ir-opt-aggressive.md  05-rt-meter-enforce.md  06-passthrough-stdlib-open-bif.md  (+5 more)
src/: twocore.gleam  twocore_cli_ffi.erl  twocore_codegen_ffi.erl  twocore_rt_mem_atomics_ffi.erl  twocore_rt_ref_ffi.erl  twocore_rt_state_ffi.erl  twocore_rt_table_ets_ffi.erl  wasm2core.gleam
test/: twocore_conformance_ffi.erl  twocore_emit_test_ffi.erl  twocore_rt_state_test_ffi.erl  twocore_rt_table_ets_test_ffi.erl  twocore_rt_test_ffi.erl  twocore_threaded_test_ffi.erl
(+215 files in other folders)
