[package]
name = "twocore-smoke"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Real, widely-used, permissively-licensed (MIT/Apache-2.0) pure-compute crates.
# cargo fetches their source and statically links them into an import-free MVP wasm.
[dependencies]
dlmalloc    = { version = "0.2", features = ["global"] }          # import-free allocator
crc32fast   = { version = "1.5", default-features = false }        # CRC-32 (MIT/Apache-2.0)
sha2        = { version = "0.10", default-features = false }       # SHA-256 (MIT/Apache-2.0)
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }  # DEFLATE (MIT/Zlib/Apache-2.0)

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
